<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
    android:id="@+id/main_content"
        tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="P A Y M E N T"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/CTA_bg"
                android:textStyle="bold"
                android:fontFamily="@font/josefinsans_semibold"/>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end|right"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_height"
            android:layout_margin="@dimen/spacing_large"
            android:visibility="visible"
            app:cardBackgroundColor="@color/purple_800"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop"
                android:src="@drawable/world_map" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="18dp">


                        <ImageView
                            android:layout_width="@dimen/chip_width"
                            android:layout_height="@dimen/chip_height"
                            android:layout_marginTop="@dimen/chip_top_margin"
                            android:src="@drawable/ic_copper_card" />

                        <TextView
                            android:id="@+id/tv_card_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/activity_vertical_margin"
                            android:text="@string/card_number_sample"
                            android:textColor="@color/card_text_color"
                            android:textSize="@dimen/header_text"
                            android:fontFamily="@font/ocramedium"/>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="@dimen/spacing_mlarge" />

                        <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="@dimen/items_inbetween_small"
                                android:text="@string/card_validity_label"
                                android:textColor="@color/card_text_color"
                                android:textSize="@dimen/xsmall_text"
                                android:fontFamily="@font/kreditfront"/>

                            <TextView
                                android:id="@+id/tv_validity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/card_validity_sample"
                                android:textColor="@color/card_text_color"
                                android:textSize="@dimen/small_text"
                                android:fontFamily="@font/ocramedium"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="@dimen/items_inbetween_small"
                                android:text="@string/card_cvv"
                                android:textColor="@color/card_text_color"
                                android:textSize="@dimen/xsmall_text"
                                android:fontFamily="@font/kreditfront"/>

                            <TextView
                                android:id="@+id/tv_cvv"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/card_cvv_sample"
                                android:textColor="@color/card_text_color"
                                android:textSize="@dimen/small_text"
                                android:fontFamily="@font/ocramedium"/>

                        </LinearLayout>
                    </LinearLayout>

                         <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/items_inbetween_small"
                            android:layout_marginEnd="@dimen/items_inbetween_small"
                            android:layout_marginTop="@dimen/activity_vertical_margin"
                            android:text="@string/card_name_sample"
                            android:textColor="@color/card_text_color"
                            android:textSize="@dimen/xsmall_text"
                            android:fontFamily="@font/kreditfront"/>

                        <TextView
                            android:id="@+id/tv_member_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/card_name_sample"
                            android:textAllCaps="true"
                            android:textColor="@color/card_text_color"
                            android:textSize="@dimen/medium_text"
                            android:fontFamily="@font/ocramedium"/>

                    </LinearLayout>

                <ImageView
                    android:id="@+id/ivType"
                    android:layout_width="@dimen/cardtype_width"
                    android:layout_height="@dimen/cardtype_height"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:scaleType="fitCenter"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:paddingBottom="@dimen/spacing_mlarge" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mlarge" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="12dp">

        <TextView
            style="@style/CardLabelTwo"
            android:text="@string/card_details"
            android:drawableLeft="@drawable/ic_credit_card_black_24dp"
            android:drawableStart="@drawable/ic_credit_card_black_24dp"
            android:drawablePadding="4dp"
            android:fontFamily="@font/josefinsans_semibold"/>

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="4dp"
            app:elevation="6dp"
            app:cardMaxElevation="4dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@android:color/white"
            style="@style/CardStyle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/CardLabel"
                    android:text="@string/card_number" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_number"
                    style="@style/CardInput"
                    android:hint="Card Number"
                    android:inputType="number"
                    android:maxLength="19"
                    android:background="@drawable/edittext_border"/>

                <TextView
                    style="@style/CardLabel"
                    android:text="@string/card_holders_name" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    style="@style/CardInput"
                    android:hint="Card Name"
                    android:inputType="text|textNoSuggestions"
                    android:maxLength="22"
                    android:background="@drawable/edittext_border"
                    android:privateImeOptions="nm" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/CardLabel"
                            android:text="@string/card_validity" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_validity"
                            style="@style/CardInput"
                            android:hint="Expiration Date"
                            android:inputType="number"
                            android:maxLength="5"
                            android:background="@drawable/edittext_border"
                            android:layout_marginBottom="10dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/CardLabel"
                            android:text="@string/card_cvv" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_cvv"
                            style="@style/CardInput"
                            android:hint="CVV/CVC"
                            android:inputType="number"
                            android:maxLength="3"
                            android:background="@drawable/edittext_border"
                            android:layout_marginBottom="8dp"/>
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    style="@style/CardLabel"
                    android:text="@string/card_holders_email" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    style="@style/CardInput"
                    android:hint="Card Email"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/edittext_border"
                    android:privateImeOptions="nm" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp">

                    <TextView
                        style="@style/CardInput"
                        android:text="@string/save_card" />

                    <Switch
                        style="@style/CardLabel"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="8dp"/>
                </RelativeLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_large">

        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/purple_800"
            android:text="MAKE PAYMENT"
            android:textAllCaps="false"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="@android:color/white" />
    </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>