<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rave_maincontent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RaveActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarTwo"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="P A Y  W I T H  R A V E"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/CTA_bg"
                android:textStyle="bold"
                android:fontFamily="@font/josefinsans_semibold"/>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/toolbarTwo"
        android:paddingTop="32dp">


    <androidx.cardview.widget.CardView
        android:id="@+id/raveCard"
        app:cardCornerRadius="4dp"
        app:elevation="6dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@android:color/white"
        style="@style/CardStyle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp">

            <TextView
                style="@style/CardLabelTwo"
                android:text="@string/payment_details"
                android:drawableLeft="@drawable/ic_credit_card_black_24dp"
                android:drawableStart="@drawable/ic_credit_card_black_24dp"
                android:drawablePadding="4dp"
                android:paddingTop="16dp"
                android:fontFamily="@font/josefinsans_semibold"/>

        <TextView
            style="@style/CardLabel"
            android:text="@string/customer_first_name" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_firstname"
            style="@style/CardInput"
            android:hint="Customer First Name"
            android:inputType="text|textNoSuggestions"
            android:maxLength="22"
            android:background="@drawable/edittext_border"
            android:privateImeOptions="nm" />

        <TextView
            style="@style/CardLabel"
            android:text="@string/customer_last_name" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_lastname"
            style="@style/CardInput"
            android:hint="Customer Last Name"
            android:inputType="text|textNoSuggestions"
            android:maxLength="22"
            android:background="@drawable/edittext_border"
            android:privateImeOptions="nm" />

        <TextView
            style="@style/CardLabel"
            android:text="@string/customer_email" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_emailTwo"
            style="@style/CardInput"
            android:hint="Customer Email"
            android:inputType="textEmailAddress"
            android:background="@drawable/edittext_border"
            android:privateImeOptions="nm" />

    </LinearLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/rave_button"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/spacing_large"
        android:layout_height="55dp"
        android:background="@color/purple_800"
        android:gravity="center"
        android:text="MAKE PAYMENT"
        android:textAllCaps="false"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>